# dezoomcamp-2026-homework

./: .gitignore  Dockerfile  README.md  homework-02-notes.txt  homework-04-notes.txt  homework-answers.txt  ingest_data.py  main.tf  pipeline.py  pyproject.toml
03-data-warehouse/: big_query_hw.sql  homework-03-notes.txt  load_yellow_taxi_data_transcript.txt
04-analytics-engineering/: homework-04.sql  load_fhv_data.py  load_green_taxi_data.py  load_yellow_taxi_data.py
04-analytics-engineering/taxi_rides_ny/models/marts/: schema.yml
04-analytics-engineering/taxi_rides_ny/models/staging/: sources.yml  stg_fhv_tripdata.sql
flows/: 04_postgres_taxi.yaml  05_postgres_taxi_scheduled.yaml  06_gcp_kv.yaml
pipeline/: Dockerfile  homework-01-05-ingestion.ipynb  homework-01-05-ingestion.py
